<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue">

    <ImageView
        android:id="@+id/ivBoredIdea"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/things_bored_new"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/linearActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivBoredIdea"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/activity"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAccessibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearActivity"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAccessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/accessibility"

            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/text_accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearAccessibility">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/type"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearType"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:text="@string/participants"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearParticipants"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/price"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearPrice"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:text="@string/link"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            android:linksClickable="true"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dark_blue"
        android:text="@string/not_today"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@id/linearPrice"/>



</androidx.constraintlayout.widget.ConstraintLayout>